sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:18: error: type mismatch;
 found   : Unit
 required: Boolean
		if (test =false){
                         ^AlgCocktailSort3:30: error: type mismatch;
 found   : Unit
 required: Boolean
		if (test2 =false){
                          ^